# csad2526KI-409MakovskiyViktor13

./: CMakeLists.txt  README.md  prompt_lists_1.txt  prompt_lists_2.txt  prompt_lists_3.txt  prompt_lists_4.txt
.github/workflows/: ci.yml
tests/: unit_tests.cpp
